# vkmoderator_bot

./: .gitignore  alembic.ini  config.py  main.py  pyproject.toml  requirements.txt
blueprints/: __init__.py  admin.py  autoai.py  common.py  enums.py  help.py  lead.py  legal.py  legal_extended.py  legal_lead.py  mailing.py  moderator.py  moderator_extended.py  rules.py  unit.py
database/: __init__.py  base.py  db_utils.py
google_api/: api.py  responses.py
helpfuncs/: __init__.py  functions.py  jsonfunctions.py  ssaver.py  vkfunctions.py
migrations/: env.py
migrations/versions/: 2023_11_20_0126-77cc4fb5103c_initial.py
src/: vkbottle_config.py
src/blueprints/: __init__.py  admin.py  base_labeler.py  chat_actions.py  common.py  help.py  legal.py  legal_extended.py  moderator.py  moderator_extended.py  rules.py
src/database/: database.py  exceptions.py
src/google_api/: __init__.py  api.py  responses.py
src/helpfuncs/: __init__.py  functions.py  hot_issues.py  jsonfunctions.py  list_stuffs_utils.py  ssaver.py  vkfunctions.py
src/loop_wrappers/: __init__.py  hot_issues_checkout.py  infinite_online.py  loop_wrapper.py
src/repositories/: __init__.py  hot_issues.py  stuffs.py  users.py
src/schemas/: __init__.py  hot_issues.py  object_validators.py  registration.py  response.py  stuff.py  stuff_group.py  user.py
src/services/: __init__.py  hot_issues.py  stuffs.py  users.py
src/utils/: __init__.py  api_requests.py  dependencies.py  (+5 more)
utils/: __init__.py  enums.py  exceptions.py  info_classes.py
wordsdetector/: __init__.py  ai.py  handler.py  states.py
(+8 files in other folders)
