[tool.poetry]
name = "vk-bot-moderator"
version = "2.0.8"
description = ""
authors = ["kreyNie <kreynie@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
vkbottle = "^4.3.12"
sqlalchemy = "^2.0.23"
google-api-python-client = "^2.106.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
loguru = "^0.7.2"
pyppeteer = "^1.0.2"
aiosqlite = "^0.19.0"
alembic = "^1.12.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
